bo-cha changes and more
increased font size, did most alt text

--- a/about.html
+++ b/about.html
@@ -95,7 +95,11 @@
         <p>
           Plants Vs. Zombies 2 Reflourished (2025)
           <em>Last updated: November 2025</em><br />
-          <img class="video-game-image" src="assets/images/hypsb2zu79x91.jpg" />
+          <img
+            class="video-game-image"
+            src="assets/images/hypsb2zu79x91.jpg"
+            alt="Video game cover image for Plants Vs. Zombies 2 Reflourished."
+          />
         </p>
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
@@ -121,15 +125,12 @@
         </p>
       </li>
     </ul>
-    <footer class="hero-footer">
-      <ul class="hero-footer-navigation">
-        <li><a href="#" class="custom-navigation">Instagram</a></li>
-        <li>
-          <a href="mailto:yuqizhang@my.capilanou.ca" class="custom-navigation"
-            >Email</a
-          >
-        </li>
-      </ul>
-    </footer>
+    <ul class="footer-nav-list">
+      <li class="footer-item-4">
+        <p class="fineprint">
+          &copy; 2024-2026. Coded frantically by yours truly.
+        </p>
+      </li>
+    </ul>
   </body>
 </html>
