--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -69,7 +69,7 @@
     <div class="project-image-wide">
       <img
         src="assets/images/caroline-zhang-chinese-national-bag-design.gif"
-        alt=""
+        alt="Gif of a luxury gift shop bag for a Chinese museum exhibit. There is a Chinese poem on the front and side of the bag. Seals are being stamped onto the screen and taken off."
         width="1800"
       />
     </div>
@@ -104,7 +104,7 @@
           <figure>
             <img
               src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-exhibit-poster-mockup.jpg"
-              alt=""
+              alt="Bus shelter ad for the Made in China exhibit at the Vancouver Art Gallery."
               width="1000"
             />
           </figure>
@@ -115,13 +115,35 @@
       <figure>
         <img
           src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Packaging-box-mockup.jpg"
-          alt=""
+          alt="Cinnibar seal stamp paste product photo with 3 cover variations stacked on each other. The featured paintings are Finches and Bamboo (early 12th century) by Emperor Huizong, Lanscaped with Poems (1688) by Gong Xian, and The Sixteen Luohans (1591) by Wu Bin"
           width="1800"
         />
         <figcaption class="caption">
           Visitors can take home their own seal stamp ink from the gift shop.
         </figcaption>
       </figure>
+    </div>
+    <div class="project-wrapper">
+      <aside class="project-aside-temp-bottom">
+        <div class="project-info-">
+          <p class="project-description">
+            The featured paintings are Finches and Bamboo (early 12th century)
+            by Emperor Huizong, Lanscaped with Poems (1688) by Gong Xian, and
+            The Sixteen Luohans (1591) by Wu Bin
+          </p>
+        </div>
+      </aside>
+      <main class="project-details">
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-china-nation-design-seal-stamp-ink-product.png"
+              alt="Mockup of a circular porcelain container holding cinnibar seal stamp ink paste. The lid has a print of the painting Finches and Bamboo."
+              width="800"
+            />
+          </figure>
+        </div>
+      </main>
     </div>
 
     <ul class="global-footer">
