--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -106,7 +106,7 @@
           <figure>
             <img
               src="assets/images/caroline-zhang-d3adme4t-music-festival-spotify-takeover.jpg"
-              alt=""
+              alt="Laptop screen on the Spotify home page. The page banner has the D3ADME4T illustration and is illuminating the surroundings. The text reads &quot;D3ADME4T it's what we'll all be eventually...&quot;"
               width="1000"
             />
             <figcaption class="caption">
@@ -121,7 +121,7 @@
       <figure>
         <img
           src="assets/images/caroline-zhang-d3adme4t-music-festival-spotify-takeover-mobile.jpg"
-          alt=""
+          alt="Iphone screens with one on a Spotify playlist. The playlist cover art features a D3ADME4T illustration. The other phone is on the Spotify home page and is showing a canvas screen for the D3ADME4T playlist. "
           width="1800"
         />
         <figcaption class="caption">
@@ -135,7 +135,7 @@
         <figure>
           <img
             src="assets/images/caroline-zhang-d3adme4t-social.gif"
-            alt=""
+            alt='Gif of the D3ADME4T social media campaign. The posts have user generated facetious copy and images reading "___ is D3ADME4T"'
             width="600"
           />
           <figcaption class="caption">
