--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -69,7 +69,7 @@
     <div class="project-image-wide">
       <img
         src="assets/images/caroline-zhang-foundry-bc-design-poster-series.jpg"
-        alt=""
+        alt="Series of three posters for the Foundry brand refresh. Each poster has an animal illustration and call to action to visit foundrybc.ca for youth mental health resources."
         width="1800"
       />
     </div>
@@ -127,7 +127,7 @@
       <figure>
         <img
           src="assets/images/caroline-zhang-foundry-bc-design-website-social-media.jpg"
-          alt=""
+          alt="Laptop on the Foundry BC home screen. The hero section has an image of three youths laughing and the type &quot;Foundry's here. We're transforming how young people and thier families find the resources and support they need, both online and in their communities.&quot;"
           width="1800"
         />
       </figure>
