--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
     <section class="home-blurb-container">
       <div class="home-blurb">
         <h5>
-          I’m a Vancouver-based designer with a focus on research and problem
-          solving. I like dogs, video games, and music.
+          I’m a Vancouver-based designer with a focus on research and obsessing
+          over solving problems . I love dogs, video games, and how you're on my
+          website right now!
         </h5>
       </div>
     </section>
@@ -147,7 +148,7 @@
             <figure>
               <img
                 src="assets/images/caroline-zhang-resolve-social-enterprise-storefront-logo-sign.jpg"
-                alt=""
+                alt="Storefront with white decal illustration of two figures holding hands growing a flower. They are surrounded by plantlife and symbols."
               />
             </figure>
             <a href="resolve.html">
@@ -161,7 +162,7 @@
             <figure>
               <img
                 src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-elevator-advertisement-campaign.jpg"
-                alt=""
+                alt='Closed elevator doors with a pink backdrop and blue circular cartoon characters packed in. "Tagline embrace the squish" is in big bold type in the center.'
               />
             </figure>
             <a href="bocha.html">
