--- a/bocha.html
+++ b/bocha.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
@@ -53,90 +53,94 @@
         </li>
       </ul>
     </header>
-    <div class="project-wrapper">
-      <aside class="project-aside">
-        <div class="project-info">
+    <div>
+      <ul class="project-navigation">
+        <li class="arrow">
+          <a href="index.html" class="navigation-arrow"
+            ><i class="fas fa-arrow-left fa-2x"></i
+          ></a>
+        </li>
+        <li>
           <h1 class="project-title">Bo-Cha Boba Tea</h1>
+        </li>
+      </ul>
+    </div>
 
+    <div class="project-image-wide">
+      <img
+        src="assets/images/caroline-zhang-bubble-tea-drink-can-design-mockup-alternate.jpg"
+        alt="Series of three posters for the Foundry brand refresh. Each poster has an animal illustration and call to action to visit foundrybc.ca for youth mental health resources."
+        width="1800"
+      />
+    </div>
+
+    <div class="project-wrapper">
+      <aside class="project-aside-temp">
+        <div class="project-info">
+          <h6>Branding / Packaging / Campaign</h6>
           <p class="project-description">
             Jammed buses, packed elevators, crowded hallways. Working life is
             all about being close to others (even when you don't want to be).
             Bo-Cha Boba Tea embodies this philosophy, and brings it to you with
-            a bright fun twist. As a lifelong boba/bubble tea drinker, I paid
-            homage to the cutesy colourful nature of Asian drink packaging. The
-            use of gradients alongside the bold overlapping colours inspired by
-            risograph printing created a blend with the Western aesthetic.
+            a bright fun twist. I paid homage to the cutesy colourful nature of
+            Asian drink packaging. The use of gradients alongside the bold
+            overlapping colours inspired by risograph printing created a blend
+            with the Western aesthetic.
           </p>
-          <p class="project-description">
-            The advertising campaign for this product follows the mantra
-            "embrace the squish" and shows how it comes up in the working
-            person's day to day. Utilizing advertisements on places that
-            naturally attract many busybodies and a cheeky message to charm
-            viewers.
-          </p>
+        </div>
+      </aside>
+      <main class="project-details">
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-bubble-tea-drink-can-design-transit-bus-wrap-advertisement-campaign.jpg"
+              alt=""
+              width="1000"
+            />
+            <figcaption class="caption">
+              The advertising campaign for this product follows the mantra
+              "embrace the squish" and shows how it comes up in the working
+              person's day to day. Utilizing advertisements on places that
+              naturally attract many busybodies and a cheeky message to charm
+              viewers.
+            </figcaption>
+          </figure>
+        </div>
+      </main>
+    </div>
+    <div class="project-image-wide">
+      <figure>
+        <img
+          src="assets/images/caroline-zhang-bubble-tea-drink-can-design-elevator-advertisement-campaign.jpg"
+          alt=""
+          width="1800"
+        />
+      </figure>
+    </div>
+
+    <div class="project-wrapper">
+      <aside class="project-aside-temp-bottom">
+        <div class="project-info-">
           <p class="project-description">
             The three flavours and illustrations represent various moods people
             experience daily. The bursting energy in original, monotonous buzz
             in coffee, and need for relaxation with green tea.
           </p>
         </div>
-        <ul class="project-navigation">
-          <li class="arrow">
-            <a href="resolve.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-left fa-2x"></i
-            ></a>
-          </li>
-          <li class="arrow">
-            <a href="foundry-refresh.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-right fa-2x"></i
-            ></a>
-          </li>
-        </ul>
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <img
-            src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-mockup.jpg"
-            width="900"
-            alt="A description of the image"
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
-            width="700"
-            alt=""
-          />
-        </div>
-        <div class="project-image">
           <figure>
             <img
-              src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-elevator-advertisement-campaign.jpg"
-              width="700"
-              alt=""
-            />
-          </figure>
-        </div>
-        <div class="project-image">
-          <figure>
-            <img
-              src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-transit-bus-wrap-advertisement-campaign.jpg"
-              width="800"
-              alt=""
-            />
-          </figure>
-        </div>
-        <div class="project-image">
-          <figure>
-            <img
-              src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-line.jpg"
-              width="600"
-              alt="A description of the image"
+              src="assets/images/caroline-zhang-bubble-tea-drink-can-design-mockup.jpg"
+              alt="Lineup of the three Bo-Cha flavours, original black milk tea, coffee, and jasmine."
+              width="1000"
             />
           </figure>
         </div>
       </main>
     </div>
+
     <ul class="global-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
@@ -204,10 +208,6 @@
         </p>
       </li>
     </ul>
-
-    <div id="myID" class="bottomMenu hide">
-      <a href="#">Back to top</a>
-    </div>
 
     <script type="text/javascript">
       myID = document.getElementById("myID");
