foundry case study

--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -92,22 +92,10 @@
             campaign rollout.
           </p>
           <p class="project-description">
-            When developing the campaign, I took into consideration the great
-            existing brand assets and how their content production works on a
-            low budget. The campaign should be evergreen and reiteratable over
-            and over again. The existing animal spot illustrations have been
-            repurposed in the “Foundry’s Here” campaign to highlight how mental
-            health challenges are something natural that Foundry can help with.
-            Additionally, the circular shapes found in other parts of the brand
-            are utilized as the main graphic shape to create interesting and
-            flexible compositions alongside the static spot illustrations.
-          </p>
-          <p class="project-description">
-            Interested in seeing more?<br />
-            <a
-              href="https://drive.google.com/file/d/13mCa84RkuJj5_9LZlba0s8kgYwebpSR-/view?usp=sharing"
-              >Here’s a link to the full presentation.
-            </a>
+            It initally took me years of searching for mental health support for
+            a friend to recommend that I finally check out Foundry. I wanted to
+            develop a brand strategy that could help make Foundry more well
+            known so they could reach more youths in need of support.
           </p>
         </div>
       </aside>
@@ -115,7 +103,7 @@
         <div class="project-image">
           <figure>
             <img
-              src="assets/images/caroline-zhang-foundry-bc-design-brochure.jpg"
+              src="assets/images/caroline-zhang-design-portfolio-case-study-foundry-bc-refresh-sketches.jpg"
               alt=""
               width="1000"
             />
@@ -123,6 +111,78 @@
         </div>
       </main>
     </div>
+    <div class="project-wrapper">
+      <aside class="project-aside-temp-bottom">
+        <div class="project-info-">
+          <h1 class="project-title">Campaign</h1>
+          <p class="project-description">
+            The animal illustrations in the “Foundry’s Here” campaign highlight
+            how mental health challenges are a natural process that Foundry can
+            help with. The circular shapes are utilized as the main graphic
+            shape to create interesting and flexible compositions alongside the
+            static spot illustrations.
+          </p>
+        </div>
+      </aside>
+      <main class="project-details">
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-design-portfolio-case-study-foundry-bc-refresh-poster-illustration-development.jpg"
+              alt=""
+              width="1000"
+            />
+          </figure>
+        </div>
+      </main>
+    </div>
+    <div class="header">
+      <h1 class="project-title">Social Media</h1>
+      <p class="project-description">
+        Online posts are handled by individual centers to fit their needs for
+        events, workshops, and more. I developed new post templates to be
+        editable in Canva alongside the spot illustration assets while
+        maintaining clarity and consistency.
+      </p>
+    </div>
+
+    <div class="project-image-wide">
+      <figure>
+        <img
+          src="assets/images/caroline-zhang-design-portfolio-case-study-foundry-bc-refresh-social-media-before-after.jpg"
+          alt="Before and after photo of example Instagram style social media posts for Foundry."
+          width="1800"
+        />
+      </figure>
+    </div>
+
+    <div class="project-wrapper">
+      <aside class="project-aside-temp-bottom">
+        <div class="project-info-">
+          <h1 class="project-title">Website Development</h1>
+          <p class="project-description">
+            For the website, I wanted to make the information on Foundry and
+            their resources like counselling and social services more upfront.
+            Users are prompted to choose if they are looking for support or to
+            support someone else, leading them to relevant information. The
+            centre navigation has also been changed from a carousel to a map to
+            facilitate a higher numbers of centers.
+          </p>
+        </div>
+      </aside>
+      <main class="project-details">
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-design-portfolio-case-study-foundry-bc-refresh-website-development.jpg"
+              alt="Development process from the existing Foundry BC website to wireframes and finalized updated website."
+              width="1000"
+            />
+          </figure>
+        </div>
+      </main>
+    </div>
+
     <div class="project-image-wide">
       <figure>
         <img
@@ -131,6 +191,16 @@
           width="1800"
         />
       </figure>
+    </div>
+
+    <div class="header">
+      <h1 class="project-title">Interested in seeing more?</h1>
+      <p class="project-description">
+        <a
+          href="https://drive.google.com/file/d/13mCa84RkuJj5_9LZlba0s8kgYwebpSR-/view?usp=sharing"
+          >Here’s a link to the full presentation.
+        </a>
+      </p>
     </div>
 
     <ul class="global-footer">
