format changes for less text in projects

--- a/bocha.html
+++ b/bocha.html
@@ -97,16 +97,18 @@
               alt=""
               width="1000"
             />
-            <figcaption class="caption">
-              The advertising campaign for this product follows the mantra
-              "embrace the squish" and shows how it comes up in the working
-              person's day to day. Utilizing advertisements on places that
-              naturally attract many busybodies and a cheeky message to charm
-              viewers.
-            </figcaption>
           </figure>
         </div>
       </main>
+    </div>
+    <div class="header">
+      <h1 class="project-title">Campaign</h1>
+      <p class="project-description">
+        The advertising campaign for this product follows the mantra "embrace
+        the squish" and shows how it comes up in the working person's day to
+        day. Utilizing advertisements on places that naturally attract many
+        busybodies and a cheeky message to charm viewers.
+      </p>
     </div>
     <div class="project-image-wide">
       <figure>
