--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -80,9 +80,9 @@
           <h6>Branding / Packaging / Campaign</h6>
           <p class="project-description">
             For this project I wanted to challenge the stereotype that "Made in
-            China" means cheap production and poor quality. The use of seal
-            stamps and texture are inspired by the rich trade and art culture
-            found throughout Chinese history.
+            China" means cheap production and poor quality through a museum
+            exhibit. The use of seal stamps and texture are inspired by the rich
+            trade and art culture found throughout Chinese history.
           </p>
           <p class="project-description">
             The characters making up the stamps represent the Chinese dynasties.
@@ -90,12 +90,6 @@
             technology. By combining the dynasty names with seal stamps, I
             wanted to redefine "Made in China" to represent the history,
             innovation, and artistic merit of the nation.
-          </p>
-          <p class="project-description">
-            This project has been extended to a museum exhibit with the same
-            goals, and the bag acting as the gift shop packaging. I created a
-            promotional poster for this as well as an example product which
-            utilizes museum artwork.
           </p>
         </div>
       </aside>
@@ -111,6 +105,14 @@
         </div>
       </main>
     </div>
+    <div class="header">
+      <h1 class="project-title">Packaging</h1>
+      <p class="project-description">
+        An example product that would be sold in the gift shop is cinnibar stamp
+        paste sold in porcelain containers with curated artwork on the lids and
+        box.
+      </p>
+    </div>
     <div class="project-image-wide">
       <figure>
         <img
@@ -118,18 +120,15 @@
           alt="Cinnibar seal stamp paste product photo with 3 cover variations stacked on each other. The featured paintings are Finches and Bamboo (early 12th century) by Emperor Huizong, Lanscaped with Poems (1688) by Gong Xian, and The Sixteen Luohans (1591) by Wu Bin"
           width="1800"
         />
-        <figcaption class="caption">
-          Visitors can take home their own seal stamp ink from the gift shop.
-        </figcaption>
       </figure>
     </div>
     <div class="project-wrapper">
       <aside class="project-aside-temp-bottom">
         <div class="project-info-">
           <p class="project-description">
-            The featured paintings are Finches and Bamboo (early 12th century)
-            by Emperor Huizong, Lanscaped with Poems (1688) by Gong Xian, and
-            The Sixteen Luohans (1591) by Wu Bin
+            The paintings featured in this project are Finches and Bamboo (early
+            12th century) by Emperor Huizong, Lanscaped with Poems (1688) by
+            Gong Xian, and The Sixteen Luohans (1591) by Wu Bin.
           </p>
         </div>
       </aside>
