--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -89,16 +89,6 @@
             illustrated series of 3 print ads line the streets alongside a
             digital takeover activation in collaboration with Spotify.
           </p>
-          <p class="project-description">
-            A separate social media campaign has been developed to bring
-            additional attention to the festival and, more importantly, to
-            connect and facilitate the online community who enjoys digital
-            hardcore music. The "_ is D3ADME4T" campaign provides resources and
-            inspiration to encourage audiences to express themselves both
-            creatively and emotionally. The facetious copy points out the
-            illogical aggravators in the modern landscape, as well as attacks
-            against individuals' beings.
-          </p>
         </div>
       </aside>
       <main class="project-details">
@@ -138,11 +128,18 @@
             alt='Gif of the D3ADME4T social media campaign. The posts have user generated facetious copy and images reading "___ is D3ADME4T"'
             width="600"
           />
-          <figcaption class="caption">
-            Customizable poster for internet-dwellers to fill out with their
-            likeness.
-          </figcaption>
         </figure>
+      </div>
+
+      <div class="header">
+        <h1 class="project-title">Social Campaign</h1>
+        <p class="project-description">
+          The "_ is D3ADME4T" campaign provides resources and inspiration to
+          encourage audiences to express themselves both creatively and
+          emotionally. The facetious copy points out the illogical aggravators
+          in the modern landscape, as well as attacks against individuals'
+          beings.
+        </p>
       </div>
 
       <div class="project-image">
