replaced resolve, home page pages

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <div class="home-blurb">
         <h5>
           I’m a Vancouver-based designer with a focus on research and obsessing
-          over solving problems . I love dogs, video games, and how you're on my
-          website right now!
+          over solving problems . I'm grateful for dogs, video games, and that
+          you're on my website right now!
         </h5>
       </div>
     </section>
@@ -147,13 +147,13 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/images/caroline-zhang-resolve-social-enterprise-storefront-logo-sign.jpg"
-                alt="Storefront with white decal illustration of two figures holding hands growing a flower. They are surrounded by plantlife and symbols."
+                src="assets/images/caroline-zhang-design-portfolio-capstone-project-ARR-branding-home.jpg"
+                alt="White logo on pinkish red background reading ARR Association of Richmond Restaurants."
               />
             </figure>
-            <a href="resolve.html">
+            <a href="404.html">
               <div class="overlay">
-                <h1 class="overlay-title">Resolve</h1>
+                <h1 class="overlay-title">Capstone Project</h1>
                 <h4 class="overlay-description">Branding</h4>
               </div>
             </a>
