--- a/about.html
+++ b/about.html
@@ -82,17 +82,17 @@
           with solving problems on the fly, interacting with clients, and
           working efficiently.
         </p>
-        <p>
+        <p class="about-desc">
           I spend every waking moment next to computers. Feel free to reach out
           to talk all things design, hobbies, or the general state of the world.
           I’ll get back to you as soon as I can.
         </p>
         <h3>Testimonials</h3>
-        <p>"One of the greatest minds I know."</p>
+        <p class="about-desc">"One of the greatest minds I know."</p>
       </li>
       <li class="about-item-3">
         <h3>What's wigggle playing right now?</h3>
-        <p>
+        <p class="about-desc">
           Plants Vs. Zombies 2 Reflourished (2025)
           <em>Last updated: November 2025</em><br />
           <img
