--- a/liminal.html
+++ b/liminal.html
@@ -219,15 +219,15 @@
           solving.
         </p>
 
-        <p>
+        <p class="award-item">
           <a href="about.html">I wanna know more!</a>
         </p>
       </li>
       <li class="footer-item-2">
         <h2>Awards &amp; Recognition</h2>
         <ul class="awards-list">
-          <li class="award-item">
-            <p>
+          <li>
+            <p class="award-item">
               <a
                 href="https://rgd.ca/hiring-designers/award-winners/rgd-student-awards-past-winners"
                 >RGD's 2023 Student Awards Honourable Mentions in packaging and
