--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="home-blurb">
         <h5>
           I’m a Vancouver-based designer with a focus on research and obsessing
-          over solving problems . I'm grateful for dogs, video games, and that
+          over solving problems. I'm grateful for dogs, video games, and that
           you're on my website right now!
         </h5>
       </div>
@@ -187,15 +187,15 @@
           solving.
         </p>
 
-        <p>
+        <p class="award-item">
           <a href="about.html">I wanna know more!</a>
         </p>
       </li>
       <li class="footer-item-2">
         <h2>Awards &amp; Recognition</h2>
         <ul class="awards-list">
-          <li class="award-item">
-            <p>
+          <li>
+            <p class="award-item">
               <a
                 href="https://rgd.ca/hiring-designers/award-winners/rgd-student-awards-past-winners"
                 >RGD's 2023 Student Awards Honourable Mentions in packaging and
