--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -100,8 +100,8 @@
               width="1000"
             />
             <figcaption class="caption">
-              Spotify takeover showcasing the headlining artist and linking to
-              the festival playlist.
+              Spotify takeover showcasing festival art and linking to the
+              festival playlist.
             </figcaption>
           </figure>
         </div>
