--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
     <script
-      src="https://kit.fontawesome.com/d300c2ea15.js"
+      src="https://kit.fontawesome.com/51b52316a1.js"
       crossorigin="anonymous"
     ></script>
 
@@ -133,6 +133,7 @@
           <li class="work-page-grid-item">
             <figure>
               <img
+                class="rounded"
                 src="assets/images/caroline-zhang-music-festival-branding-illustration-poster.jpg"
                 alt="Bus shelter ad for the D3ADME4T music festival. The dog girl mascot is pulling her mouth open and showing her grimace."
               />
@@ -221,19 +222,25 @@
       <li class="footer-item-3">
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
-          <li class="social-item">
-            <a href="https://www.behance.net/wigggle">Behance</a>
+          <li class="fa-icon">
+            <a href="https://www.behance.net/wigggle"
+              ><i class="fa-brands fa-behance"></i
+            ></a>
           </li>
-          <li class="social-item">
+          <li class="fa-icon">
             <a href="https://www.instagram.com/wiggggggggggle/?hl=en"
-              >Instagram</a
-            >
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </li>
-          <li class="social-item">
-            <a href="https://www.linkedin.com/in/wigggle/">LinkedIn</a>
+          <li class="fa-icon">
+            <a href="https://www.linkedin.com/in/wigggle/"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </li>
-          <li class="social-item">
-            <a href="mailto:yuqizhang@my.capilanou.ca">hit me up!</a>
+          <li class="fa-icon">
+            <a href="mailto:yuqizhang@my.capilanou.ca"
+              ><i class="fa-solid fa-envelope"></i
+            ></a>
           </li>
         </ul>
       </li>
