--- a/liminal.html
+++ b/liminal.html
@@ -24,7 +24,7 @@
     ></script>
   </head>
 
-  <body class="project-1">
+  <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
@@ -57,8 +57,29 @@
         </li>
       </ul>
     </header>
+    <div>
+      <ul class="project-navigation">
+        <li class="arrow">
+          <a href="index.html" class="navigation-arrow"
+            ><i class="fas fa-arrow-left fa-2x"></i
+          ></a>
+        </li>
+        <li>
+          <h1 class="project-title">Liminal</h1>
+        </li>
+      </ul>
+    </div>
+
+    <div class="project-image-wide">
+      <img
+        src="assets/images/caroline-zhang-liminal-ad-magazine-design-mockup.jpg"
+        alt="Magazine design mockup of Liminal issue one."
+        width="1800"
+      />
+    </div>
+
     <div class="project-wrapper">
-      <aside class="project-aside">
+      <aside class="project-aside-temp">
         <div class="project-info">
           <h1 class="project-title">Liminal Magazine</h1>
           <p class="project-description">
@@ -108,110 +129,31 @@
             <a href="https://www.linkedin.com/in/jkambashi/">jerry kambashi</a>
           </p>
         </div>
-        <ul class="project-navigation">
-          <li class="arrow">
-            <a href="foundry-refresh.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-left fa-2x"></i
-            ></a>
-          </li>
-          <li class="arrow">
-            <a href="chinese-national-bag.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-right fa-2x"></i
-            ></a>
-          </li>
-        </ul>
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-mockup.jpg"
-            width="1900"
-            height="1466"
-            alt="The front cover and part of an inside spread for the Liminal magazine."
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-mockup2.jpg"
-            width="1900"
-            height="1466"
-            alt="The front cover and part of an inside spread for the Liminal magazine."
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-1.jpg"
-            width="500"
-            height="1229"
-            alt="Liminal cover featuring young woman Alexis in a coffee shop melancholically looking off and to the side. It appears as if she is glowing."
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-2.jpg"
-            width="1900"
-            height="1229"
-            alt=""
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design3.jpg"
-            width="1900"
-            height="1229"
-            alt=""
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-4.jpg"
-            width="1900"
-            height="1229"
-            alt=""
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-5.jpg"
-            width="1900"
-            height="1229"
-            alt=""
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-6.jpg"
-            width="1900"
-            height="1229"
-            alt=""
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-7.jpg"
-            width="1900"
-            height="1229"
-            alt=""
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-8.jpg"
-            width="1900"
-            height="1229"
-            alt=""
-          />
-        </div>
-        <div class="liminal-image">
-          <img
-            src="assets/images/caroline-zhang-liminal-ad-magazine-design-9.jpg"
-            width="500"
-            height="1229"
-            alt=""
-          />
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-liminal-ad-magazine-mockup2.jpg"
+              alt="Bus shelter ad for the Made in China exhibit at the Vancouver Art Gallery."
+              width="1000"
+            />
+          </figure>
         </div>
       </main>
     </div>
+
+    <div class="project-image-wide">
+      <iframe
+        allowfullscreen="allowfullscreen"
+        allow="clipboard-write"
+        scrolling="no"
+        class="fp-iframe"
+        style="border: 1px solid lightgray; width: 100%; height: 100vh"
+        src="https://heyzine.com/flip-book/2f5814af37.html"
+      ></iframe>
+    </div>
+
     <ul class="global-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
@@ -285,11 +227,8 @@
         </p>
       </li>
     </ul>
-    <div id="myID" class="bottomMenu hide">
-      <a href="#">Back to top</a>
-    </div>
 
-    <script>
+    <script type="text/javascript">
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
