fixed the mult div

--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -135,7 +135,7 @@
         </figure>
       </div>
 
-      <div class="header">
+      <div class="header-mult">
         <h1 class="project-title">Social Campaign</h1>
         <p class="project-description">
           The "_ is D3ADME4T" campaign provides resources and inspiration to
