changed the copyright

--- a/queue.html
+++ b/queue.html
@@ -191,7 +191,7 @@
       </li>
       <li class="footer-item-4">
         <p class="fineprint">
-          &copy; 2024-2026. Coded frantically by yours truly.
+          &copy; 2024-2026. Coded frantically by who else?
         </p>
       </li>
     </ul>
