--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
     <ul class="footer-nav-list">
       <li class="footer-item-4">
         <p class="fineprint">
-          &copy; 2024-2026. Coded frantically by yours truly.
+          &copy; 2024-2026. Coded frantically by who else?
         </p>
       </li>
     </ul>
