--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Caroline Zhang // Design Portfolio</title>
+    <title>Caroline Zhang // Graphic Designer // Foundry Brand Refresh</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta
       name="description"
-      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
+      content="Brand strategy and campaign refresh for Foundry BC, including brand audit, illustrations, social templates, and a clearer, more accessible website experience."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
