--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta
       name="description"
-      content="Brand strategy and campaign refresh for Foundry BC, including brand audit, illustrations, social templates, and a clearer, more accessible website experience."
+      content="Brand strategy and campaign refresh for Foundry BC, including brand audit, illustrations, social templates, and an accessible website experience."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
