--- a/liminal.html
+++ b/liminal.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Caroline Zhang // Design Portfolio</title>
+    <title>Caroline Zhang // Graphic Designer // Liminal Magazine</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta
       name="description"
-      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
+      content="Moody and nostalgic 3DS photo magazine that captures the melancholic feeling of being between spaces with intimate imagery and storytelling."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
