--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Caroline Zhang // Design Portfolio</title>
+    <title>Caroline Zhang // Graphic Designer // Made in China</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
-    <meta
-      name="description"
-      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
-    />
+    <meta name="description" content="Museum exhibit redefining “Made in China”
+    by highlighting the nation's cultural history and innovation through seal
+    stamps and product design. />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
