--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Caroline Zhang // Design Portfolio</title>
+    <title>Caroline Zhang // Graphic Designer // D3ADME4T Music Festival</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta
       name="description"
-      content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
+      content="Digital hardcore music festival with poster ads and a Spotify takeover, driving creative expression through the “_ is D3ADME4T” campaign."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
