--- a/about.html
+++ b/about.html
@@ -93,12 +93,12 @@
       <li class="about-item-3">
         <h3>What's wigggle playing right now?</h3>
         <p class="about-desc">
-          Plants Vs. Zombies 2 Reflourished (2025)
-          <em>Last updated: November 2025</em><br />
+          Pheonix Wright Ace Attorney: Justice For All (2002)
+          <em>Last updated: January 2026</em><br />
           <img
             class="video-game-image"
-            src="assets/images/hypsb2zu79x91.jpg"
-            alt="Video game cover image for Plants Vs. Zombies 2 Reflourished."
+            src="assets/images/Justice_for_All_cover_art.png"
+            alt="Video game cover image for Pheonix Wright Ace Attorney: Justice For All"
           />
         </p>
         <h2>Contact &amp; Social</h2>
